# ba_latex

./: .gitignore  Einleitung.tex  README.md  settings.json
bachelorarbeit-latex/: setup.cfg
bachelorarbeitlatex/BA/: aa.bib  babelbst.tex  maas.bst  maas.dbj  main.aux  main.bbl  main.blg  main.lof  main.tex  main.toc
bachelorarbeitlatex/BA/ch/: bibliography.bib  ch00_Danksagung.aux  ch00_Danksagung.tex  ch00_abkuerzungen.tex  ch00_abstractDE.aux  ch00_abstractDE.tex  ch00_after_titlepage.aux  ch00_after_titlepage.tex  ch00_titlepage.aux  ch00_titlepage.tex  ch01_Einleitung.aux  ch01_Einleitung.tex  ch02_StandTechnik.aux  ch02_StandTechnik.tex  ch03_AusgangszustandModellbildung.tex  ch03_Drittes Kapitel.aux  ch03_Drittes Kapitel.tex  ch03_DrittesKapitel.aux  ch03_DrittesKapitel.tex  ch03_ErweiterungModellbildung.tex  ch04_AuslegungRegler.tex  ch05_AnalyseRegelung.tex  ch06_ZusammenfassungFazit.tex  ch07_WeitereForschung.tex  ch99_appendix.aux  ch99_appendix.tex  commands.tex  methods.tex
bachelorarbeitlatex/BA/fig/: regelkreis.drawio
bachelorarbeitlatex/BA/fig_helper/: AlgorithmusGarcia.drawio  Beschriftung_Systemantwort_und_ Overflux.pptx  CloudVerlauf.drawio  Header_Darstellung.drawio  KollokPoints.drawio  Modellbildung.pptx  NowcastDNIMap.pptx  Sprungantwort.drawio  absorber_cup.drawio  absorbercupenglish.drawio  cloud_scenario_clarification.pptx  cosine_error.drawio  elevation_azimuth.drawio  mpcprinciple.drawio  regelkreis.drawio  regelkreis_konkretessystem.drawio  solar_tower_plant.drawio
bachelorarbeitlatex/tests/: test_path_helper.py
(+2 files in other folders)
