[metadata]
name=bachelorarbeitlatex
version=0.0.1
author=Tobias Geschonneck
author_email=markus_tobias.geschonneck@smail.th-koeln.de
long_description=file: README.md
download_url=https://gitlab.dlr.de/gesc_ma/bachelorarbeit-latex
classifiers =
    Programming Language :: Python :: 3
[options]
install_requires=

packages = find:

[options.packages.find]
# This section is optional
# Each entry in this section is optional, and if not specified, the default values are:
# `where=.`, `include=*` and `exclude=` (empty).
include=bachelorarbeitlatex*
exclude=examples*
    tools*
    docs*
    bachelorarbeitlatex.tests*
